# liteclip

./: .gitignore  AGENTS.md  AVALONIA_MIGRATION_SPEC.md  BUILD.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW_FINDINGS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN-cloud-subscription.md  Program.cs  README.md  REVIEW_REPORT.md  SECURITY.md  TAURI-MIGRATION-COMPLETE.md  UNUSUED_CODE_AND_REWRITE_PLAN.md  WebViewWindow.cs  appsettings.json  architecture_audit.md  build-appimage.sh  build-installer.ps1  build-linux.sh  build-rpm.sh  build-tauri.ps1  build-tauri.sh  build.bat  build.rs  cargo_check_errors.txt  issues.md  lint-report.md  liteclip-installer.iss  liteclip.csproj  liteclip.sln  liteclip.spec  publish-win.ps1  rewrite-plan.md  run.cmd  run_output.txt  rust-toolchain.toml  (+5 more)
.cargo/: config.toml
.factory/: init.sh  services.yaml
.github/: codecov.yml  dependabot.yml
CompressionStrategies/: Av1Strategy.cs  BaseCompressionStrategy.cs  CompressionStrategyFactory.cs  EncodingModes.cs  H264Strategy.cs  H265Strategy.cs  ICompressionStrategy.cs  ICompressionStrategyFactory.cs  Vp9Strategy.cs
Endpoints/: CompressionEndpoints.cs  SettingsEndpoints.cs  SystemEndpoints.cs
Models/: CompressionJob.cs  CompressionPlan.cs  CompressionRequest.cs  CompressionResult.cs  CropDetectionResult.cs  FfmpegEncoderInfo.cs  GitHubRelease.cs  JobStatus.cs  UserSettings.cs
Properties/: AssemblyInfo.cs  launchSettings.json
Serialization/: LiteClipJsonContext.cs
Services/: AdaptiveFilterBuilder.cs  AppVersionProvider.cs  CropDetectionService.cs  DefaultCompressionPlanner.cs  EncoderSelectionService.cs  FfmpegBootstrapper.cs  FfmpegCapabilityProbe.cs  FfmpegEncoderProbe.cs  FfmpegPathResolver.cs  FfmpegProbeService.cs  FfmpegProcessRunner.cs  FfmpegProgressParser.cs  ICompressionPlanner.cs  IEncoderSelectionService.cs  IFfmpegEncoderProbe.cs  IFfmpegPathResolver.cs  IFfmpegRunner.cs  IJobStore.cs  IVideoCompressionService.cs  IVideoEncodingPipeline.cs  InMemoryJobStore.cs  JobCleanupService.cs  LoggingHelpers.cs  UpdateCheckerService.cs  UserSettingsStore.cs  VideoCompressionService.cs  VideoEncodingPipeline.cs  VideoMetadataService.cs
benches/: gui_interactions.rs
build-installer/: LiteClip.iss  README.md  build-installer.ps1
compiled_shaders/: ps_simple.cso
crates/liteclip-core/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/liteclip-core/benches/: audio_mixer.rs  config_serialization.rs  encoder_bench.rs  ring_buffer.rs
crates/liteclip-core/examples/: custom_ffmpeg.rs  custom_paths.rs  engine_host.rs  minimal_engine.rs  minimal_engine_cli.rs
crates/liteclip-core/shaders/: ps_simple.hlsl  vs_simple.hlsl
crates/liteclip-core/src/: benchmark_harness.rs  engine.rs  error.rs  ffmpeg_backend.rs  host.rs  hotkey_parse.rs  lib.rs  memory_diag.rs  paths.rs  quality_contracts.rs  runtime.rs  runtime_budget.rs
crates/liteclip-core/src/app/: clip.rs  mod.rs  state.rs
crates/liteclip-core/src/app/pipeline/: audio.rs  manager.rs  mod.rs  video.rs  webcam.rs
crates/liteclip-core/src/buffer/: error.rs  mod.rs
crates/liteclip-core/src/buffer/ring/: functions.rs  mod.rs  spmc_ring.rs  types.rs
crates/liteclip-core/src/capture/: backpressure.rs  error.rs  mod.rs  webcam.rs
crates/liteclip-core/src/capture/audio/: device_info.rs  level_monitor.rs  manager.rs  mic.rs  mixer.rs  mod.rs  system.rs
crates/liteclip-core/src/capture/dxgi/: capture.rs  device.rs  dxgicapture_traits.rs  mod.rs  texture.rs
crates/liteclip-core/src/config/: mod.rs
crates/liteclip-core/src/config/config_mod/: advancedconfig_traits.rs  audioconfig_traits.rs  functions.rs  generalconfig_traits.rs  hotkeyconfig_traits.rs  mod.rs  types.rs  videoconfig_traits.rs
crates/liteclip-core/src/encode/: cli_pipe.rs  error.rs  mod.rs  sw_encoder.rs
crates/liteclip-core/src/encode/encoder_mod/: encodedpacket_traits.rs  encoderconfig_traits.rs  functions.rs  mod.rs  types.rs
crates/liteclip-core/src/encode/ffmpeg/: amf.rs  context.rs  mod.rs  nvenc.rs  options.rs  qsv.rs  software.rs
crates/liteclip-core/src/media/: mod.rs  nal.rs
crates/liteclip-core/src/output/: companion_cache.rs  error.rs  functions.rs  mod.rs  mp4.rs  parakeet_model_cache.rs  parakeet_subtitles.rs  saver.rs  sdk_export.rs  sdk_ffmpeg_output.rs  subtitle_burn_sdk.rs  types.rs  video_file.rs  webcam_layout.rs
crates/liteclip-core/tests/: audio_mixer_integration.rs  clip_saving.rs  clip_workflow_benchmark.rs  config_migration.rs  config_proptest.proptest-regressions  config_proptest.rs  config_roundtrip.rs  config_validation_rstest.rs  e2e_recording_loop.rs  encoder_fallback.rs  engine_lifecycle.rs  ffmpeg_backend.rs  hardware_encoder_verification.rs  hotkey_edge_cases.rs  memory_pressure.rs  pipeline_integration.rs  ring_buffer_proptest.proptest-regressions  ring_buffer_proptest.rs  spmc_contention.rs
crates/liteclip-core/tests/common/: builders.rs  fixtures.rs  mocks.rs  mod.rs
frontend/: REFACTOR_PLAN.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
fuzz/: Cargo.toml
fuzz/fuzz_targets/: config_parsing.rs  hotkey_parsing.rs  ring_buffer.rs
installer/: Bundle.wxs.disabled  Components.wxs  Directories.wxs  Features.wxs  Harvest.targets  License.rtf  LiteClip.wixproj  LiteClipReplay.wixproj  Product.wxs  README.md  Registry.wxs  Shortcuts.wxs  UI.wxs  Variables.wxs  build.cmd  build.ps1  en-US.wxl
liteclip.Tests/: liteclip.Tests.csproj
perf-reports/: 01-ring-buffer.md  02-dxgi-capture.md  03-audio-pipeline.md  04-encoding-layer.md  05-output-mp4.md  06-build-optimizations.md  readiness-deps.md  readiness-validation.md
plans/: README.md  architecture-analysis-report.md  architecture-refactor-plan.md  architecture-review.md  audio-mixing-improvements.md  backend-refactor-plan.md  comprehensive-architecture-assessment.md  ffmpeg-native-migration-plan.md  gpu-zero-copy-plan.md  input  performance-analysis.md  performance-optimizations.md  road-to-release.md  tray-integration-architecture.md  video-optimization-plan.md
shaders/: ps_simple.hlsl  vs_simple.hlsl
src/: app.rs  config.rs  (+10 more)
(+297 files in other folders)
