[package]
name = "liteclip-replay"
version = "0.2.0"
edition = "2021"

[features]
default = ["ffmpeg"]
# Enable FFmpeg pipeline code paths (no native link-time FFmpeg deps)
ffmpeg = []

[dependencies]
# Ref-counted byte buffers
bytes = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "ico"] }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs"] }

# Concurrency
crossbeam = "0.8"
parking_lot = "0.12"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"

# Error handling
anyhow = "1"
thiserror = "1"

# Windows APIs
windows = { version = "0.58", features = ["Win32_Media", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Direct3D11", "Win32_Graphics_Direct3D", "Win32_Graphics_Gdi", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_Media_MediaFoundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell_PropertiesSystem", "Win32_Foundation", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Threading", "Win32_System_Performance", "Win32_System_LibraryLoader", "Win32_Devices_FunctionDiscovery", "Win32_System_JobObjects", "Win32_Security", "Win32_System_Registry", "Win32_System_ProcessStatus"] }


# Utilities
dirs = "6"
chrono = "0.4"
windows-core = "0.58"
memchr = "2"

# Tray
tray-icon = "0.19"
eframe = { version = "0.33.3", features = ["wgpu"] }
egui = "0.33.3"
egui-notify = "0.21"
rfd = "0.17.2"
winit = "0.30"
nnnoiseless = "0.5.2"
rayon = "1.11.0"
rodio = "0.20"
ffmpeg-next = { version = "7.1.0", default-features = false, features = ["codec", "format", "software-scaling", "software-resampling"] }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[build-dependencies]
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["ico"] }
winres = "0.1"
