[package]
name = "liteclip"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Lightweight Windows screen recorder with replay buffer, hardware-accelerated encoding, and built-in clip editor"
repository = "https://github.com/Guillermode20/liteclip-recorder"
homepage = "https://github.com/Guillermode20/liteclip-recorder"
documentation = "https://github.com/Guillermode20/liteclip-recorder#readme"
default-run = "liteclip"

[features]
default = ["ffmpeg"]
# Forward to engine; gallery also uses ffmpeg-next directly when this is on.
ffmpeg = ["liteclip-core/ffmpeg"]
# parakeet = ["liteclip-core/parakeet"]

[dependencies]
liteclip-core = { path = "crates/liteclip-core", default-features = false }

# Async (main loop, GUI)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs"] }

# Concurrency (platform bridge, gallery decode pipeline)
crossbeam = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Windows APIs (main, platform, detection, gallery D3D decode)
windows = { version = "0.58", features = ["Win32_Media", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Direct3D11", "Win32_Graphics_Direct3D", "Win32_Graphics_Gdi", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_Media_MediaFoundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell_PropertiesSystem", "Win32_Foundation", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Threading", "Win32_System_Performance", "Win32_System_LibraryLoader", "Win32_Devices_FunctionDiscovery", "Win32_System_JobObjects", "Win32_Security", "Win32_System_Registry", "Win32_System_ProcessStatus"] }

# Utilities
chrono = "0.4"
windows-core = "0.58"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "ico"] }

# Tray / GUI
tray-icon = "0.19"
eframe = { version = "0.33.3", features = ["glow"] }
egui = "0.33.3"
egui-notify = "0.22"
rfd = "0.17.2"
winit = "0.30"

rayon = "1.11.0"
rodio = "0.20"
rustc-hash = "2.0"
ffmpeg-next = { version = "7.1.0", default-features = false, features = ["codec", "format", "software-scaling", "software-resampling"] }

# Update checker
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
members = ["crates/liteclip-core"]

[profile.dev.package.nnnoiseless]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[build-dependencies]
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["ico"] }
winres = "0.1"

[dev-dependencies]
# Test utilities
tempfile = "3"
assert_matches = "1.5"
serial_test = "3"
rstest = "0.23"
bytes = "1"
toml = "0.8"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Output verification
mp4parse = "0.12"

# JSON parsing for output verification
serde_json = "1"

# E2E testing utilities
tokio-test = "0.4"

# Additional test isolation
scopeguard = "1"

[[test]]
name = "e2e"
path = "tests/e2e.rs"
harness = true
required-features = ["ffmpeg"]

[[bench]]
name = "gui_interactions"
harness = false
required-features = ["ffmpeg"]
