[package]
name = "liteclip"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Lightweight Windows screen recorder with replay buffer, hardware-accelerated encoding, and built-in clip editor"
repository = "https://github.com/Guillermode20/liteclip-recorder"
homepage = "https://github.com/Guillermode20/liteclip-recorder"
documentation = "https://github.com/Guillermode20/liteclip-recorder#readme"
default-run = "liteclip"

[features]
default = ["ffmpeg"]
# Forward to engine; gallery also uses ffmpeg-next directly when this is on.
ffmpeg = ["liteclip-core/ffmpeg"]
# Update checker (enables ureq dependency)
updater = ["dep:ureq"]

# Test categorization (forwarded to liteclip-core)
test-slow = ["liteclip-core/test-slow"]
test-stress = ["liteclip-core/test-stress"]

[dependencies]
liteclip-core = { path = "crates/liteclip-core", default-features = false }

# Async (main loop, GUI)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs"] }

# Concurrency (platform bridge, gallery decode pipeline)
crossbeam-channel = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Windows APIs (main, platform, detection)
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_System_JobObjects", "Win32_System_Registry"] }

# Utilities
chrono = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "ico"] }

# Tray / GUI
tray-icon = "0.19"
eframe = { version = "0.33.3", features = ["glow"] }
egui = "0.33.3"
egui-notify = "0.21"
rfd = "0.17.2"
winit = "0.30"

rayon = "1.11.0"
rodio = "0.20"
rustc-hash = "2.0"
ffmpeg-next = { version = "7.1.0", default-features = false, features = ["codec", "format", "software-scaling", "software-resampling"] }

# Update checker (optional, enabled via "updater" feature)
ureq = { version = "3", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
members = ["crates/liteclip-core"]

[profile.dev]
# Explicit dev profile settings (uses defaults for fastest recompilation)
opt-level = 0       # No optimization, fastest compile
debug = true        # Full debug info
incremental = true  # Enable incremental compilation
lto = "off"         # No LTO, fastest link

[profile.dev.package.nnnoiseless]
opt-level = 3

[profile.dev.package.liteclip-core]
opt-level = 2

[profile.dev.package.crossbeam-channel]
opt-level = 1

[profile.dev.package.parking_lot]
opt-level = 1

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true

[build-dependencies]
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["ico"] }
winres = "0.1"

[dev-dependencies]
# Test utilities
tempfile = "3"
assert_matches = "1.5"
serial_test = "3"
rstest = "0.26"
bytes = "1"
toml = "0.8"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Output verification
mp4parse = "0.12"

# JSON parsing for output verification
serde_json = "1"

# E2E testing utilities
tokio-test = "0.4"

# Additional test isolation
scopeguard = "1"

[[test]]
name = "e2e"
path = "tests/e2e.rs"
harness = true
required-features = ["ffmpeg"]

[[bench]]
name = "gui_interactions"
harness = false
required-features = ["ffmpeg"]
