[package]
name = "liteclip-core"
version = "0.2.0"
edition = "2021"
description = "Windows screen capture, encoding, and replay-buffer engine (LiteClip)"
readme = "README.md"
keywords = ["screen-capture", "recording", "replay-buffer", "windows", "dxgi"]
categories = ["multimedia::video", "os::windows-apis"]
license = "MIT OR Apache-2.0"
include = [
    "src/**/*",
    "shaders/**/*",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "build.rs",
    "examples/**/*",
]

[features]
default = ["ffmpeg"]
# Enable FFmpeg pipeline code paths (no native link-time FFmpeg deps)
ffmpeg = []
# In release builds, also walk ancestors for `ffmpeg_dev/...` (debug builds always may).
dev-ffmpeg-paths = []

[dependencies]
bytes = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "ico"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs"] }
crossbeam = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
anyhow = "1"
thiserror = "1"
windows = { version = "0.58", features = ["Win32_Media", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Direct3D11", "Win32_Graphics_Direct3D", "Win32_Graphics_Gdi", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_Media_MediaFoundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell_PropertiesSystem", "Win32_Foundation", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Threading", "Win32_System_Performance", "Win32_System_LibraryLoader", "Win32_Devices_FunctionDiscovery", "Win32_System_JobObjects", "Win32_Security", "Win32_System_Registry", "Win32_System_ProcessStatus"] }
dirs = "6"
chrono = "0.4"
windows-core = "0.58"
ffmpeg-next = { version = "7.1.0", default-features = false, features = ["codec", "format", "software-scaling", "software-resampling"] }
nnnoiseless = "0.5.2"

[[example]]
name = "minimal_engine"
required-features = ["ffmpeg"]

[[example]]
name = "custom_ffmpeg"
required-features = ["ffmpeg"]

[[example]]
name = "custom_paths"
