[package]
name = "liteclip-core"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"
description = "Windows screen capture, encoding, and replay-buffer engine (LiteClip)"
readme = "README.md"
keywords = ["screen-capture", "recording", "replay-buffer", "windows", "dxgi"]
categories = ["multimedia::video", "os::windows-apis"]
license = "MIT"
repository = "https://github.com/Guillermode20/liteclip-recorder"
homepage = "https://github.com/Guillermode20/liteclip-recorder"
documentation = "https://docs.rs/liteclip-core"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "build.rs",
    "examples/**/*",
    "tests/**/*",
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[features]
default = ["ffmpeg"]
# FFmpeg encoding/muxing via `ffmpeg-next` (linked SDK/DLLs). No `ffmpeg.exe` required at runtime.
# This is the only supported backend; the previous ffmpeg-cli feature has been removed in favor of
# native ffmpeg-next filter graphs for all operations including clip export.
ffmpeg = ["dep:ffmpeg-next", "dep:libc"]
# In release builds, also walk ancestors for `ffmpeg_dev/...` (debug builds always may).
dev-ffmpeg-paths = []

[dependencies]
bytes = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "ico"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs"] }
crossbeam = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
tracing = "0.1"
anyhow = "1"
thiserror = "1"
windows = { version = "0.58", features = ["Win32_Media", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Direct3D11", "Win32_Graphics_Direct3D", "Win32_Graphics_Gdi", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_Media_MediaFoundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell_PropertiesSystem", "Win32_Foundation", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Threading", "Win32_System_Performance", "Win32_System_LibraryLoader", "Win32_Devices_FunctionDiscovery", "Win32_System_JobObjects", "Win32_Security", "Win32_System_Registry", "Win32_System_ProcessStatus"] }
dirs = "6"
chrono = "0.4"
windows-core = "0.62"
ffmpeg-next = { version = "7.1.0", default-features = false, features = ["codec", "format", "filter", "software-scaling", "software-resampling", "device"], optional = true }
libc = { version = "0.2", optional = true }
# parakeet-rs = { version = "0.3.4", optional = true }
# # Same version as `parakeet-rs`; features merged so we use dynamic ORT (see `parakeet` feature).
# ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = [
#     "load-dynamic",
#     "ndarray",
#     "tracing",
#     "tls-native",
#     "api-24",
# ] }
# zip = { version = "2", optional = true }
# ureq = { version = "3", optional = true }
nnnoiseless = "0.5.2"
parking_lot = "0.12"
memchr = "2"

[[example]]
name = "minimal_engine"
required-features = ["ffmpeg"]

[[example]]
name = "custom_ffmpeg"
required-features = ["ffmpeg"]

[[example]]
name = "engine_host"
required-features = ["ffmpeg"]

[[example]]
name = "custom_paths"

[dev-dependencies]
# Test utilities
tempfile = "3"
assert_matches = "1.5"
serial_test = "3"
rstest = "0.23"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Property-based testing
proptest = "1"

[[bench]]
name = "ring_buffer"
harness = false

[[bench]]
name = "config_serialization"
harness = false

[[bench]]
name = "audio_mixer"
harness = false
